Actualizacion de paquetes y clases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=foroHub
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/fhub
+spring.datasource.username=root
+spring.datasource.password=26239875
+server.error.include-stacktrace = never
+
+
+api.security.token.secret = ${JWT_SECRET:12345678}
