--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fhub
 spring.datasource.username=root
 spring.datasource.password=26239875
 server.error.include-stacktrace = never
+spring.flyway.baseline-on-migrate=true
 
 
 api.security.token.secret = ${JWT_SECRET:12345678}
